# ziggy

./: .gitignore  1  BUILD  Dockerfile  README.md  WORKSPACE  docker-compose.yml  go.mod  go.sum
api/: BUILD.bazel  crypto.pb.go  crypto.proto
cmd/database/: BUILD.bazel  database.go
cmd/server/: BUILD.bazel  server.go
database/: create_table.sql
database/coins/: create_tables.sql
pkg/coinmarketcap/: BUILD.bazel  coinmarketcap.go
pkg/crypto/: BUILD.bazel  crypto.go
pkg/db/: BUILD.bazel  db.go  model.go
pkg/server/: BUILD.bazel  server.go
pkg/tracker/: BUILD.bazel  tracker.go
