load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "crypto_proto",
    srcs = ["crypto.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "crypto_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/palak92/ziggy/api",
    proto = ":crypto_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "api",
    embed = [":crypto_go_proto"],
    importpath = "github.com/palak92/ziggy/api",
    visibility = ["//visibility:public"],
)
