load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "database_lib",
    srcs = ["database.go"],
    importpath = "github.com/palak92/ziggy/cmd/database",
    visibility = ["//visibility:public"],
    deps = ["@com_github_go_sql_driver_mysql//:mysql"],
)

go_binary(
    name = "database",
    embed = [":database_lib"],
    visibility = ["//visibility:public"],
)
