load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "server",
    embed = [":server_lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "server_lib",
    srcs = ["server.go"],
    importpath = "github.com/palak92/ziggy/cmd/server",
    visibility = ["//visibility:private"],
    deps = [
        "@io_bazel_rules_go//bazel-bin/api/crypto_go_proto_/github.com/palak92/ziggy/api:go_default_library",
        "@io_bazel_rules_go//pkg/server:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//reflection",
    ],
)
