load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "db",
    srcs = [
        "db.go",
        "model.go",
    ],
    importpath = "github.com/palak92/ziggy/pkg/db",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/coinmarketcap",
        "@com_github_go_sql_driver_mysql//:mysql",
    ],
)
