load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "server",
    srcs = ["server.go"],
    importpath = "github.com/palak92/ziggy/pkg/server",
    visibility = ["//visibility:public"],
    deps = [
        "//api:crypto_go_proto",
        "@io_bazel_rules_go//proto:go_grpc",
        "@org_golang_google_grpc//:go_default_library",
    ],
)
