load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "server",
    srcs = ["server.go"],
    importpath = "github.com/palak92/ziggy/pkg/server",
    visibility = ["//visibility:public"],
    deps = ["@io_bazel_rules_go//bazel-bin/api/crypto_go_proto_/github.com/palak92/ziggy/api:go_default_library"],
)
